[gd_scene load_steps=14 format=3 uid="uid://boncpnpwh1bl6"]

[ext_resource type="Texture2D" uid="uid://bpmgktjdydyc7" path="res://sprites/title.png" id="1_p7s0j"]
[ext_resource type="Script" path="res://map/main_menu.gd" id="1_rp0cp"]
[ext_resource type="FontFile" uid="uid://cwsuy4c8bgbno" path="res://fonts/Pixel_NES.otf" id="2_c0o0v"]
[ext_resource type="Texture2D" uid="uid://tg8t3dkkifgr" path="res://sprites/casual_logo.png" id="3_r1wl0"]
[ext_resource type="Texture2D" uid="uid://twoljxwif4ma" path="res://sprites/arrow.png" id="4_ktgxi"]

[sub_resource type="Theme" id="Theme_8prg4"]
default_font = ExtResource("2_c0o0v")
default_font_size = 10

[sub_resource type="Theme" id="Theme_ep2we"]
default_font = ExtResource("2_c0o0v")
default_font_size = 10

[sub_resource type="Theme" id="Theme_bmfe5"]
default_font = ExtResource("2_c0o0v")
default_font_size = 10

[sub_resource type="Theme" id="Theme_ju7mr"]
default_font = ExtResource("2_c0o0v")
default_font_size = 10

[sub_resource type="Theme" id="Theme_jm42v"]
default_font = ExtResource("2_c0o0v")
default_font_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hh2e"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_pm75j"]
default_font = ExtResource("2_c0o0v")
default_font_size = 10

[sub_resource type="Theme" id="Theme_22xqf"]
default_font = ExtResource("2_c0o0v")
default_font_size = 10

[node name="main_menu" type="Node2D"]
script = ExtResource("1_rp0cp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 256.0
offset_bottom = 240.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(128, 88)
scale = Vector2(2, 2)
texture = ExtResource("1_p7s0j")
metadata/_edit_lock_ = true

[node name="PRESS_START" type="Node" parent="."]

[node name="Player_1" type="Label" parent="PRESS_START"]
offset_left = 62.0
offset_top = 137.0
offset_right = 124.0
offset_bottom = 149.0
theme = SubResource("Theme_8prg4")
text = "1 Player"
horizontal_alignment = 1

[node name="Arrow" type="Sprite2D" parent="PRESS_START"]
position = Vector2(54, 143)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_ktgxi")

[node name="Player_2" type="Label" parent="PRESS_START"]
offset_left = 144.0
offset_top = 137.0
offset_right = 204.0
offset_bottom = 149.0
theme = SubResource("Theme_ep2we")
text = "2 Player"
horizontal_alignment = 1

[node name="Arrow2" type="Sprite2D" parent="PRESS_START"]
visible = false
position = Vector2(134, 144)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_ktgxi")

[node name="Credits" type="Label" parent="PRESS_START"]
offset_left = 102.0
offset_top = 160.0
offset_right = 154.0
offset_bottom = 172.0
theme = SubResource("Theme_bmfe5")
text = "Credits"
horizontal_alignment = 1

[node name="Arrow3" type="Sprite2D" parent="PRESS_START"]
visible = false
position = Vector2(93, 166)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_ktgxi")

[node name="Logo" type="Node" parent="."]

[node name="CasualLogo" type="Sprite2D" parent="Logo"]
position = Vector2(88, 40)
texture = ExtResource("3_r1wl0")
metadata/_edit_lock_ = true

[node name="Casurae" type="Label" parent="Logo"]
offset_left = 103.0
offset_top = 32.0
offset_right = 159.0
offset_bottom = 44.0
theme = SubResource("Theme_ju7mr")
text = "CasuRae"
metadata/_edit_lock_ = true

[node name="Copyright" type="Node" parent="."]

[node name="Trademark" type="Label" parent="Copyright"]
offset_top = 192.0
offset_right = 256.0
offset_bottom = 240.0
theme = SubResource("Theme_jm42v")
text = "TM and Â© 2024
Causality Co. , LTD"
horizontal_alignment = 1

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 192.0

[node name="ColorRect" type="Panel" parent="Credits"]
z_index = 1
layout_mode = 0
offset_left = 40.0
offset_right = 216.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1hh2e")

[node name="Rae" type="RichTextLabel" parent="Credits"]
z_index = 1
layout_mode = 0
offset_left = 48.0
offset_top = 3.0
offset_right = 128.0
offset_bottom = 60.0
theme = SubResource("Theme_pm75j")
bbcode_enabled = true
text = "[u]CasuRae[/u]:
program...
SFX
Art"

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 3.0
offset_right = 208.0
offset_bottom = 60.0
theme = SubResource("Theme_22xqf")
bbcode_enabled = true
text = "[u]jrlpage[/u]:
Music"
